<resources>
    <string name="app_name">VehicleTracking</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="enter_barcode">Enter Barcode</string>
    <string name="check">Check</string>
    <string name="last_location">Last Location</string>
    <string name="change">Change</string>
    <string name="rollout">Rollout</string>
    <string name="change_station">Change Station</string>
    <string name="station_track">Station Track</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
</resources>
